--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -23,7 +23,7 @@
   opacity: 0.9;
 }
 .locations,
-.amenities {
+.filters .amenities {
   height: 100%;
   width: 25%;
   padding-left: 4%;
@@ -32,25 +32,26 @@
   flex-direction: column;
   position: relative;
 }
-.amenities {
+.filters .amenities {
   border-left: #dddddd 1px solid;
 }
 
 .locations > h3,
-.amenities > h3 {
+.filters .amenities > h3 {
   font-weight: 600;
   margin: 0;
 }
 
 .locations > h4,
-.amenities > h4 {
+.filters .amenities > h4 {
   font-weight: 400;
   font-size: 14px;
   margin: 0;
 }
 .locations:hover > .popover,
-.amenities:hover > .popover {
+.filters .amenities:hover > .popover {
   display: block;
+  z-index: 10;
 }
 
 ul,
